<resources>
    <string name="app_name">StocksMonitor</string>


    <string name="stocks">Stocks</string>
    <string name="favourite">Favourite</string>
    <string name="search_hint">Find company or ticker</string>
    <string name="popular_req">Popular requests</string>
    <string name="you_ve_sear">You\'ve searched for this</string>
    <string name="retry">Retry</string>
    <string name="nothing_found">Nothing found</string>
    <string name="no_favourite">No favourite</string>
    <string name="swipe_up_for_refresh">Swipe up for refresh</string>
    <string name="no_requests">No requests</string>
    <string name="chart">Chart</string>
    <string name="summary">Summary</string>
    <string name="news">News</string>
    <string name="day">D</string>
    <string name="week">W</string>
    <string name="month">M</string>
    <string name="six_month">6M</string>
    <string name="year">Y</string>
    <string name="all">All</string>
    <string name="news_week">News of the week</string>
    <string-array name="countryToCurrency">
        <item>AUD,\u24</item>
        <item>ANG,\u192</item>
        <item>XCD,\u24</item>
        <item>BOB,\u24</item>
        <item>KHR,\u17db</item>
        <item>DKK,\u6b</item>
        <item>KPW,\u20a9</item>
        <item>LKR,\u20a8</item>
        <item>FJD,\u24</item>
        <item>CUP,\u20b1</item>
        <item>SGD,\u24</item>
        <item>TTD,\u54</item>
        <item>RUB,\u20bd</item>
        <item>GBP,\ua3</item>
        <item>EUR,\u20ac</item>
        <item>HUF,\u46</item>
        <item>AFN,\u60b</item>
        <item>SBD,\u24</item>
        <item>MYR,\u52</item>
        <item>CZK,\u4b</item>
        <item>PAB,\u42</item>
        <item>CNY,\ua5</item>
        <item>USD,\u24</item>
        <item>VND,\u20ab</item>
        <item>ISK,\u6b</item>
        <item>LAK,\u20ad</item>
        <item>BBD,\u24</item>
        <item>QAR,\ufdfc</item>
        <item>CRC,\u20a1</item>
        <item>PLN,\u7a</item>
        <item>BND,\u24</item>
        <item>SRD,\u24</item>
        <item>NIO,\u43</item>
        <item>SVC,\u24</item>
        <item>LRD,\u24</item>
        <item>GIP,\ua3</item>
        <item>HKD,\u24</item>
        <item>VEF,\u42</item>
        <item>PKR,\u20a8</item>
        <item>IDR,\u52</item>
        <item>YER,\ufdfc</item>
        <item>CHF,\u43</item>
        <item>MKD,\u434</item>
        <item>IRR,\ufdfc</item>
        <item>MNT,\u20ae</item>
        <item>MUR,\u20a8</item>
        <item>HRK,\u6b</item>
        <item>TWD,\u4e</item>
        <item>NOK,\u6b</item>
        <item>KGS,\u43b</item>
        <item>PHP,\u20b1</item>
        <item>ALL,\u4c</item>
        <item>KRW,\u20a9</item>
        <item>NZD,\u24</item>
        <item>MZN,\u4d</item>
        <item>SOS,\u53</item>
        <item>UAH,\u20b4</item>
        <item>PYG,\u47</item>
        <item>UZS,\u43b</item>
        <item>NAD,\u24</item>
        <item>ARS,\u24</item>
        <item>SEK,\u6b</item>
        <item>HNL,\u4c</item>
        <item>FKP,\ua3</item>
        <item>NPR,\u20a8</item>
        <item>ZAR,\u52</item>
        <item>THB,\ue3f</item>
        <item>BZD,\u42</item>
        <item>EGP,\ua3</item>
        <item>SYP,\ua3</item>
        <item>GHS,\ua2</item>
        <item>MXN,\u24</item>
        <item>JPY,\ua5</item>
        <item>RSD,\u414</item>
        <item>CLP,\u24</item>
        <item>ILS,\u20aa</item>
        <item>KYD,\u24</item>
        <item>GTQ,\u51</item>
        <item>BSD,\u24</item>
        <item>BAM,\u4b</item>
        <item>SAR,\ufdfc</item>
        <item>BGN,\u43b</item>
        <item>SCR,\u20a8</item>
        <item>BWP,\u50</item>
        <item>BRL,\u52</item>
        <item>GGP,\ua3</item>
        <item>KZT,\u43b</item>
        <item>LBP,\ua3</item>
        <item>GYD,\u24</item>
        <item>BMD,\u24</item>
        <item>COP,\u24</item>
        <item>DOP,\u52</item>
        <item>UYU,\u24</item>
        <item>OMR,\ufdfc</item>
        <item>AZN,\u20bc</item>
        <item>CAD,\u24</item>
        <item>RON,\u6c</item>
        <item>NGN,\u20a6</item>
        <item>JMD,\u4a</item>
        <item>ZWD,\u5a</item>
        <item>PEN,\u53</item>
    </string-array>
</resources>