<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chart.ChartFragment">

    <TextView
        android:id="@+id/stock_price_chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/daily_price_change_chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/stock_price_chart"
        app:layout_constraintStart_toStartOf="@+id/stock_price_chart"
        app:layout_constraintTop_toBottomOf="@+id/stock_price_chart" />

    <com.anychart.AnyChartView
        android:id="@+id/any_chart_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_price_change_chart" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/suggestion_shape"
            android:padding="10dp"
            android:text="@string/day"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/suggestion_shape"
            android:padding="10dp"
            android:text="@string/week"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/suggestion_shape"
            android:padding="10dp"
            android:text="@string/month"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/six_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/suggestion_shape"
            android:padding="10dp"
            android:text="@string/six_month"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/suggestion_shape"
            android:padding="10dp"
            android:text="@string/year"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/suggestion_shape"
            android:padding="10dp"
            android:text="@string/all"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>